New Session Started Notification Added.